fixed footer color on small screens

--- a/synchro/synchro/static/css/synchro.css
+++ b/synchro/synchro/static/css/synchro.css
@@ -253,7 +253,7 @@ border-left-color: #111111;
 	text-shadow:none
 }
 @media screen and (min-width:768px){.carousel-control .glyphicons-chevron-left,.carousel-control .glyphicons-chevron-right,.carousel-control .icon-prev,.carousel-control .icon-next{
-	width:30px;height:30px;margin-top:-15px;margin-left:-15px;font-size:30px
+	width:30px;height:30px;margin-top:-15px;margin-left:-15px;font-size:30px}
 }
 .carousel-caption{
 	right:20%;left:20%;padding-bottom:30px
@@ -285,7 +285,7 @@ footer {
 
 footer > .container {
   padding-top: 40px;
-	width: 970px
+	max-width: 970px
 }
 footer a:hover,a:focus{
 	color: #fff
